--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "2.1.8",
     "react-to-print": "^2.12.6",
     "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "redux-router": "^2.1.2",
     "socket.io-client": "^4.1.2",
     "to-words": "^3.0.1",
