--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-#REACT_APP_API_URL=https://portal.aucc.edu.gh/api
-REACT_APP_API_URL=http://localhost:5020/api
-#REACT_APP_URL=https://portal.aucc.edu.gh/
-REACT_APP_URL=http://localhost:5020
+REACT_APP_API_URL=https://portal.aucc.edu.gh/api
+#REACT_APP_API_URL=http://localhost:5020/api
+REACT_APP_URL=https://portal.aucc.edu.gh/
+#REACT_APP_URL=http://localhost:5020
 
 
 
